# workspace

./: .coverage  .env.prod  .gitignore  .gitmodules  AGENTS.md  README.md  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.base.json  tsconfig.json
.github/: lock-deps.yml
.github/workflows/: lock-deps.yml
private/: .gitignore  pyproject.example.toml
scripts/: commit-push-all.js  dep.py  docs_index.py  lock.py  pull.py  switch.py  up.py  utils.py
testnb2/: .env  .gitignore  bot.py  pyproject.toml
testnb2/menu_config/: config.json
typings/skia/: __init__.pyi  cms.pyi
typings/thefuzz/: fuzz.pyi  process.pyi  utils.pyi
