[project]
name = "nb2-workspace"
version = "0"
authors = [{ name = "LgCookie", email = "lgc2333@126.com" }]
dependencies = []
requires-python = ">=3.11"
license = { text = "MIT" }
classifiers = ["Private :: Do Not Upload"]

[dependency-groups]
dev = [
    # pip
    "setuptools>=82.0.1",
    "pip>=26.1.2",
    # tools
    "basedpyright>=1.39.8",
    "ruff>=0.15.17",
    "poethepoet>=0.46.0",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    # scripts
    "tenacity>=9.1.4",
    "taskgroup>=0.2.2",
    # nonebot
    "nonebot2[all]>=2.5.0",
    "nb-cli>=1.7.4",
    "nonebug>=0.4.4",
    "nonebot-adapter-milky>=1.2.0",
    "nonebot-adapter-satori>=1.3.0",     # for cookit test
    "nonebot-plugin-orm[sqlite]>=0.8.3",
    # workspace
    "cookit[all]",
    "nonebot-plugin-picmenu-next[all]",
    "nb2-workspace-private",
]

[tool.uv]
package = false
prerelease = "allow"

[tool.uv.workspace]
members = ["external/*", "plugins/*", "private"]

[tool.uv.sources]
cookit = { workspace = true }
nonebot-plugin-picmenu-next = { workspace = true }
nb2-workspace-private = { workspace = true }

[tool.poe.tasks]
pull.script = "scripts.pull:main"
switch.script = "scripts.switch:main"

[tool.poe.tasks.up]
script = "scripts.up:main"
args = [{ name = "msg", positional = true, default = "up" }]

[tool.poe.tasks.run]
cmd = "python -m nb_cli run"
cwd = "private/test-nb2"

[tool.basedpyright]
pythonVersion = "3.10"
defineConstant = { PYDANTIC_V2 = true }
typeCheckingMode = "standard"
reportShadowedImports = false
exclude = ["**/node_modules", "**/.venv"]
executionEnvironments = [
    { root = "typings", reportIncompatibleMethodOverride = false, reportSelfClsParameterName = false },
    { root = "." },
]

[tool.ruff]
target-version = "py310"
respect-gitignore = false
extend-exclude = []

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.ruff.lint]
ignore = [
    "B008",
    "B905",
    # "COM812",
    "E501",
    "F821",
    "FBT001",
    "FBT002",
    "ISC001",
    "PERF203",
    "PGH003",
    "PLC04",
    "PLC2701",
    "PLR09",
    "PLR1702",
    "PLR2004",
    "PLR6301",
    "PLW0603",
    "PLW1641",
    "PLW2901",
    "RUF001",
    "RUF002",
    "RUF003",
    "RUF006",
    "RUF029",
    "RUF100",
    "S101",
    "S311",
    "S404",
    "SIM117",
    "TC001",
    "TRY002",
    "TRY003",
    "W505",
]
select = [
    "A",
    "ANN001",
    "ARG",
    "ASYNC",
    "B",
    "C4",
    "COM",
    "DTZ",
    "E",
    "F",
    "FAST",
    "FBT",
    "FLY",
    "FURB",
    "I",
    "INP",
    "ISC",
    "N",
    "NPY",
    "PD",
    "PERF",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "SLF",
    "SLOT",
    "TC",
    "TRY",
    "UP",
    "W",
    "YTT",
]

[tool.ruff.lint.per-file-ignores]
"private/misc/*" = ["B018", "INP001"]
"typings/skia/*" = [
    "A002",
    "ANN001",
    "E743",
    "N8",
    "PLW0211",
    "PYI021",
    "PYI034",
]
"typings/thefuzz/*" = ["N802"]

[tool.ruff.lint.isort]
combine-as-imports = true
detect-same-package = true
extra-standard-library = ["typing_extensions"]
split-on-trailing-comma = true

[tool.ruff.lint.flake8-type-checking]
quote-annotations = true
exempt-modules = [
    "types",
    "typing",
    "typing_extensions",
    "collections",
    "pathlib",
    "nonebot",
    "nonebot_plugin_alconna",
    "nonebot_plugin_uninfo",
]
