[tool.pdm]

[project]
name = "nb2-fast-deploy"
version = "0.1.0"
description = "A NoneBot2 fast deploy pack."
authors = [{ name = "student_2333", email = "lgc2333@126.com" }]
dependencies = []
requires-python = ">=3.8"
license = { text = "MIT" }
readme = "README.md"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
]
plugins = [
    "nonebot_plugin_akinator",
    "nonebot_plugin_autoreply",
    "nonebot_plugin_bawiki",
    "nonebot_plugin_fuckyou",
    "nonebot_plugin_picmcstat",
    "nonebot_plugin_picstatus",
    "nonebot_plugin_rimofun",
]
plugin_dirs = []
# preload_plugins = []
