[tool.pdm]

[project]
name = "nb2-fast-deploy"
version = "0.1.0"
description = "A NoneBot2 fast deploy pack."
authors = [{ name = "student_2333", email = "lgc2333@126.com" }]
dependencies = []
requires-python = ">=3.8"
license = { text = "MIT" }
readme = "README.md"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
    # { name = "Telegram", module_name = "nonebot.adapters.telegram", project_link = "nonebot-adapter-telegram", desc = "Telegram 协议" },
]
plugins = ["nonebot_plugin_multincm"]
plugin_dirs = ["src/plugins"]
# preload_plugins = []
